feat: add passkey functionality

--- a/apps/native/app/package.json
+++ b/apps/native/app/package.json
@@ -75,9 +75,11 @@
     "react-native-mmkv-storage": "0.9.1",
     "react-native-navigation": "7.32.1",
     "react-native-navigation-hooks": "6.3.0",
+    "react-native-passkey": "2.1.1",
     "react-native-passkit-wallet": "0.1.6",
     "react-native-pdf": "6.6.2",
     "react-native-quick-actions": "0.3.13",
+    "react-native-quick-base64": "2.1.1",
     "react-native-share": "7.1.1",
     "react-native-spotlight-search": "2.0.0",
     "react-native-svg": "15.1.0",
