--- a/apps/native/app/package.json
+++ b/apps/native/app/package.json
@@ -74,7 +74,6 @@
     "react-native-passkit-wallet": "0.1.6",
     "react-native-pdf": "6.6.2",
     "react-native-quick-actions": "0.3.13",
-    "react-native-quick-base64": "2.1.1",
     "react-native-share": "7.1.1",
     "react-native-spotlight-search": "2.0.0",
     "react-native-svg": "15.1.0",
@@ -111,5 +110,9 @@
   },
   "resolutions": {
     "eslint": "8.12.0"
+  },
+  "volta": {
+    "node": "20.13.1",
+    "yarn": "4.2.2"
   }
 }
