chore(user-profile): Remove migration worker and make user profile strict (#14791)
* Remove worker and make user profile strict

* Fix dependant type errors.

---------

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/apps/services/user-profile/project.json
+++ b/apps/services/user-profile/project.json
@@ -52,13 +52,6 @@
         "buildTarget": "services-user-profile:build"
       }
     },
-    "worker": {
-      "executor": "@nx/js:node",
-      "options": {
-        "buildTarget": "services-user-profile:build",
-        "args": ["--job", "worker"]
-      }
-    },
     "lint": {
       "executor": "@nx/linter:eslint",
       "options": {
@@ -98,7 +91,7 @@
     "migrate/generate": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "../../../node_modules/.bin/sequelize-cli migration:generate --name $(whoami)",
+        "command": "../../../node_modules/.bin/sequelize-cli migration:generate",
         "cwd": "apps/services/user-profile/"
       }
     },
