chore(clients-signature-collection): add tests (#15125)
* first tests

* update jest config

* moar tests

* remove unused import

---------

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/libs/clients/signature-collection/project.json
+++ b/libs/clients/signature-collection/project.json
@@ -13,7 +13,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": ["{workspaceRoot}/coverage/libs/clients/signature-collection"],
       "options": {
         "jestConfig": "libs/clients/signature-collection/jest.config.ts",
         "passWithNoTests": true
