feat(services-auth-api): Implement passkey registration and authentication (#15153)
* WIP Support passkey registration in public api

* Be able to authenticate passkeys

* Duplicate validate authentication to ids api

* WIP Attestation

* Refactor

* Refactor

* Remove temporary docker-compose file

* Update test

* Update types

* Include passkey config in ids-api

* Refactor options models and dtos

* Be able to delete passkey

* Include displayName in registration options

* Change UnauthorizedException to BadRequestException

* Return idp and user_sub from verifyAuthentication

* Update idp to being non-nullable

* Refactor

* Add guards to ids-api and audit to public-api and ids-api

* Pass encoded passkey into verifyAuthentication

* Add passkey env variables to ids-api infra

* Add redis nodes to infra

* Update input to match

* Refactor and allow multiple origins

* Update infra

* Refactor

* Fix origins in config

* Revert node app attest dependency

* Update volta node version to match version defined in engines

* Add feature flags

* Remove todo

* Be able to configure maximum age of passkey

* chore: charts update dirty files

* Allow max passkey age to be configured by a secret

* Fix test

* Fix tests

* Update apps/services/auth/ids-api/src/app/passkeys/passkeys.controller.ts

Co-authored-by: Sævar Már Atlason <54210288+saevarma@users.noreply.github.com>

* Update apps/services/auth/public-api/src/app/modules/passkeys/passkeys.controller.ts

Co-authored-by: Sævar Már Atlason <54210288+saevarma@users.noreply.github.com>

* Refactor

* Add try catch around passkey base64 decoding and json parsing

* Refactor

* Increase test coverage

* Remove

* Use postgres db for testing

* Fix lint

* Revert lint fix and disable no-var-requires

* Update passkey.model.ts

---------

Co-authored-by: andes-it <builders@andes.is>
Co-authored-by: Sævar Már Atlason <54210288+saevarma@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@nestjs/terminus": "10.2.0",
     "@react-pdf/renderer": "^3.1.9",
     "@rehooks/component-size": "1.0.3",
+    "@simplewebauthn/server": "10.0.0",
     "@sindresorhus/slugify": "1.0.0",
     "@statoscope/webpack-plugin": "5.20.1",
     "@storybook/core-server": "7.4.1",
@@ -485,7 +486,7 @@
     "dd-trace@5.14.1": "patch:dd-trace@npm%3A5.14.1#./.yarn/patches/dd-trace-npm-5.14.1-8d45ad14d6.patch"
   },
   "volta": {
-    "node": "18.16.0",
+    "node": "20.14.0",
     "yarn": "3.2.3"
   },
   "packageManager": "yarn@3.2.3"
